Revision history for IRC::Client

{{$NEXT}}

4.0.11  2023-11-07T14:12:36+01:00
    - Don't cue ping tests for the same second.  This could happen when
      bursting a message to a channel.  Only one ping test will suffice
    - Update copyright year
    - Add sponsor link

4.0.10  2023-11-07T13:42:50+01:00
    - Set default ping-wait independent of last ping received.  This looks
      like it will fix bouncing behaviour of bots because they missed a PING

4.0.9  2022-10-27T11:46:56+02:00
    - Upped dependency on IO::Socket::Async::SSL, japhb++

4.0.8  2022-02-12T10:45:27+01:00
    - Upped dependency on IO::Socket::Async::SSL

4.0.7  2022-01-07T00:01:03+01:00
    - Make sure that an exception in react/whenever quits

4.0.6  2021-12-15T15:24:11+01:00
    - Make PING check more reliable by scheduling one every time
      the client says something on the server (apparently IRC servers
      treat anything the client says as a PONG, so the timeout timer
      server side appears to be reset then)
    - Remove the "use IRC::Client::Message" endpoint again, it was the
      wrong fix.  Code that is trying to use the separate module, should
      just remove that and just do a "use IRC::Client" instead

4.0.5  2021-12-13T20:05:00+01:00
    - Make sure we have a "use IRC::Client::Message" endpoint

4.0.4  2021-12-10T16:15:27+01:00
    - Fixed debugging logic (just call "debug" now)
    - Handle not being able to connect at all better
    - Fix PING test logic: it didn't work

4.0.3  2021-12-09T11:38:03+01:00
    - Make sure IRC::Client::Plugin class is exported

4.0.2  2021-12-09T11:21:03+01:00
    - Some more internal code reorganization
    - Added PING test checker + automatic reconnect capability
    - Added "magic-word" capability to tell bot to reconnect

4.0.1  2021-12-07T19:58:39+01:00
    - Bump dependency on IO::Socket::Async::SSL
    - Fix links in documentation
    - Moved all code into a single file for easier maintenance

4.0.0  2021-09-10T13:53:41+02:00