@@ -8,6 +8,8 @@ filename = lib/IRC/Client.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
 
 [UploadToZef]
